manifests/gitpod/001_NetworkPolicy_blobserve.yaml
---
# networking.k8s.io/v1/NetworkPolicy blobserve
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    app: gitpod
    component: blobserve
  name: blobserve
  namespace: gitpod
spec:
  ingress:
    - {}
  podSelector:
    matchLabels:
      app: gitpod
      component: blobserve
  policyTypes:
    - Ingress
